// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render in brand color 1`] = `
<body>
  <div>
    <div
      class="bg-brand-500 text-white"
    >
      <div
        class="flex h-10 items-center justify-center font-medium text-sm"
      >
        Hello
      </div>
    </div>
  </div>
</body>
`;

exports[`Banner should render in yellow 1`] = `
<body>
  <div>
    <div
      class="bg-yellow-500 text-yellow-900"
    >
      <div
        class="flex h-10 items-center justify-center font-medium text-sm"
      >
        Hello
      </div>
    </div>
  </div>
</body>
`;
